@@ -290,13 +290,13 @@ msg_new_town: '&b%s created a new town called %s'
 msg_plot_for_sale: '&b%s put the plot (%s) up for sale!'
 msg_registration: '&eWelcome %s to the server!'
 msg_registration_old: '&eWelcome this is your first login.@You''ve successfully been registered!@Try the /towny command for more help.'
-msg_war_eliminated: '&6[War] &b%s was eliminated from the war.'
-msg_war_forfeited: '&6[War] &b%s forfeited.'
+msg_war_eliminated: '&6[War]&b %s was eliminated from the war.'
+msg_war_forfeited: '&6[War]&b %s forfeited.'
 msg_war_join: '&6[War] &b%s joined the fight!'
-msg_war_join_forced: '&6[War] The nation of &b%s has been forced into war due to global settings!'
-msg_war_join_nation: '&6[War] The nation of &b%s has joined the war!'
-msg_war_lose_block: '(%s) belonging to %s has fallen.'
-msg_war_score: '&6[War] &b%s scored %d points!'
+msg_war_join_forced: '&6[War]&b The nation of %s has been forced into war due to global settings!'
+msg_war_join_nation: '&6[War]&b The nation of %s has joined the war!'
+msg_war_lose_block: '&6[War]&b (%s) belonging to %s has fallen.'
+msg_war_score: '&6[War]&b %s scored %d points!'
 msg_war_cannot_do: '&cYou cannot do this when the world is at war.'
 msg_war_in_progress: '&cWar already in progress.'
 msg_war_started: '&eStarted the war countdown.'
